--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
     <div class="selectors"> <!-- 添加一个包裹选择器的容器 -->
         <select id="selectedHour">
+            <option value="1">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -67,6 +68,7 @@
             <option value="23">23</option>
         </select>
         <select id="selectedMinute">
+            <option value="1">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
