--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>倒计时</title>
+    <title>预约计算器</title>
     <style>
         body {
             display: flex;
@@ -18,6 +18,11 @@
             display: flex;
             justify-content: center;
             width: 100%;
+            align-items: center;
+        }
+        .label {
+            font-size: 1.5em;
+            color: #333;
         }
         select {
             padding: 15px; /* 增加填充以增加输入框高度 */
@@ -41,6 +46,7 @@
 
 <body>
     <div class="selectors"> <!-- 添加一个包裹选择器的容器 -->
+        <label class="label">预约</label>
         <select id="selectedHour">
             <option value="1">0</option>
             <option value="1">1</option>
@@ -154,7 +160,7 @@
                 hourDiff--;
             }
 
-            const timeDifference = `时间差异：${hourDiff} 小时 ${minuteDiff} 分钟`;
+            const timeDifference = `结果：${hourDiff} 小时 ${minuteDiff} 分钟`;
             document.getElementById('timeDifference').innerText = timeDifference;
 
             // 将选定的小时和分钟存储在localStorage中
